@@ -555,6 +555,16 @@ bcdui.util =
       }
       return Math.round( num * scale + Number.EPSILON ) / scale;
     } 
+  },
+
+  /**
+   * Generates a new UUID
+  * @return {string} uuid
+  */
+   getUuid : () => {
+    // https://gist.github.com/jed/982883
+    var b = function (a) { return a ? (a ^ Math.random() * 16 >> a / 4).toString(16) : ([1e7] + -1e3 + -4e3 + -8e3 + -1e11).replace(/[018]/g, b) };
+    return b();
   }
 }
 
